--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -1,1 +1,12 @@
-// $default-color: #409eff
+body, html{
+  margin: 0;
+  padding: 0;
+  background-color: #fff;
+}
+#app {
+  font-family: Avenir, Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  color: #2c3e50;
+}
