--- a/src/pages/center-board/index.scss
+++ b/src/pages/center-board/index.scss
@@ -48,6 +48,7 @@
   & > .el-form {
     // 69 = 12+15+42
     height: calc(100vh - 69px);
+    width: 100%;
   }
 }
 // 编辑器为空提示
@@ -60,4 +61,50 @@
   font-size: 18px;
   color: #ccb1ea;
   letter-spacing: 4px;
+}
+
+
+.drawing-board {
+  height: 100%;
+  position: relative;
+  // .components-body {
+  //   padding: 0;
+  //   margin: 0;
+  //   font-size: 0;
+  // }
+  // .sortable-ghost {
+  //   position: relative;
+  //   display: block;
+  //   overflow: hidden;
+  //   &::before {
+  //     content: " ";
+  //     position: absolute;
+  //     left: 0;
+  //     right: 0;
+  //     top: 0;
+  //     height: 3px;
+  //     background: rgb(89, 89, 223);
+  //     z-index: 2;
+  //   }
+  // }
+  // .components-item.sortable-ghost {
+  //   width: 100%;
+  //   height: 60px;
+  //   background-color: $selectedColor;
+  // }
+  // .active-from-item {
+  //   & > .el-form-item{
+  //     background: $selectedColor;
+  //     border-radius: 6px;
+  //   }
+  //   & > .drawing-item-copy, & > .drawing-item-delete{
+  //     display: initial;
+  //   }
+  //   & > .component-name{
+  //     color: $lighterBlue;
+  //   }
+  // }
+  // .el-form-item{
+  //   margin-bottom: 15px;
+  // }
 }
