--- a/src/pages/center-board/index.scss
+++ b/src/pages/center-board/index.scss
@@ -108,3 +108,27 @@
   //   margin-bottom: 15px;
   // }
 }
+
+
+
+.container {
+  width: 80px;
+
+  height: 300px;
+
+  position: absolute;
+
+  left: 0;
+
+  display: flex;
+
+  flex-direction: column;
+
+  padding: 0;
+}
+
+.item {
+  margin-top: 10px;
+
+  transition: all linear 0.3s;
+}
