--- a/src/pages/center-board/index.scss
+++ b/src/pages/center-board/index.scss
@@ -1,39 +1,5 @@
 @import "~/style/common.scss";
 
-.action-bar{
-  position: relative;
-  height: 42px;
-  text-align: right;
-  padding: 0 15px;
-  box-sizing: border-box;;
-  border: 1px solid #f1e8e8;
-  border-top: none;
-  border-left: none;
-  .delete-btn{
-    color: #F56C6C;
-  }
-}
-.action-bar{
-  & .el-button {
-    margin-left: 15px;
-    color: $primary;
-    &:focus, &:hover {
-      color: $primary-light !important;
-      background: transparent !important;
-    }
-    &:active {
-      color: $primary-dark !important;
-      background: transparent !important;
-    }
-  }
-  & i {
-    font-size: 20px;
-    vertical-align: middle;
-    position: relative;
-    top: -1px;
-  }
-}
-
 .center-scrollbar {
   height: calc(100vh - 42px);
   overflow: hidden;
@@ -70,11 +36,6 @@
   .component {
     transition: all 0.3s;
   }
-  // .components-body {
-  //   padding: 0;
-  //   margin: 0;
-  //   font-size: 0;
-  // }
   .sortable-ghost {
     position: relative;
     display: block;
@@ -90,11 +51,16 @@
       z-index: 2;
     }
   }
-  // .components-item.sortable-ghost {
-  //   width: 100%;
-  //   height: 60px;
-  //   background-color: $selectedColor;
+  // .component-body {
+  //   padding: 0;
+  //   margin: 0;
+  //   font-size: 0;
   // }
+  .component-item.sortable-ghost {
+    width: 100%;
+    height: 60px;
+    background-color: $selectedColor;
+  }
   // .active-from-item {
   //   & > .el-form-item{
   //     background: $selectedColor;
