--- a/src/pages/center-board/index.scss
+++ b/src/pages/center-board/index.scss
@@ -33,7 +33,7 @@
 .drawing-board {
   height: 100%;
   position: relative;
-  .component {
+  > * {
     transition: all 0.3s;
   }
   .sortable-ghost {
@@ -56,7 +56,7 @@
   //   margin: 0;
   //   font-size: 0;
   // }
-  .component-item.sortable-ghost {
+  .menu-component.sortable-ghost {
     width: 100%;
     height: 60px;
     background-color: $selectedColor;
