--- a/src/pages/center-board/TopBar/index.scss
+++ b/src/pages/center-board/TopBar/index.scss
@@ -10,23 +10,10 @@
   border: 1px solid #f1e8e8;
   border-top: none;
   border-left: none;
-  .delete-btn{
-    color: #F56C6C;
-  }
-}
-// 修改element-ui组件样式
-.action-bar{
   & .el-button {
-    margin-left: 15px;
-    color: $primary;
-    &:focus, &:hover {
-      color: $primary-light !important;
-      background: transparent !important;
-    }
-    &:active {
-      color: $primary-dark !important;
-      background: transparent !important;
-    }
+    margin-left: 0px;
+    padding-left: 5px;
+    padding-right: 5px;
   }
   & i {
     font-size: 20px;
