feat(right-board): 组件属性和表单属性

--- a/src/pages/right-board/index.scss
+++ b/src/pages/right-board/index.scss
@@ -1,9 +1,4 @@
 .right-board {
-  width: 350px;
-  position: absolute;
-  right: 0;
-  top: 0;
-  padding-top: 3px;
   .field-box {
     position: relative;
     height: calc(100vh - 42px);
@@ -12,6 +7,11 @@
   }
   .el-scrollbar {
     height: 100%;
+  }
+  .right-scrollbar {
+    .el-scrollbar__view {
+      padding: 12px 18px 15px 15px;
+    }
   }
 }
 
@@ -26,4 +26,23 @@
   .el-tabs__nav{
     width: 100%;
   }
+}
+
+.document-link {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 26px;
+  height: 26px;
+  top: 0;
+  left: 0;
+  cursor: pointer;
+  background: #409eff;
+  z-index: 1;
+  border-radius: 0 0 6px 0;
+  text-align: center;
+  line-height: 26px;
+  color: #fff;
+  font-size: 18px;
 }
