feat(right-board): 表格栅格选项

--- a/src/pages/center-board/DraggableItem/index.scss
+++ b/src/pages/center-board/DraggableItem/index.scss
@@ -17,6 +17,7 @@
 .drawing-item{
   position: relative;
   cursor: move;
+  width: 100%;
   &.unfocus-bordered:not(.active-from-item) > div:first-child {
     border: 1px dashed #ccc;
   }
