feat(right-board): 组件值/默认值

--- a/src/pages/right-board/index.scss
+++ b/src/pages/right-board/index.scss
@@ -37,11 +37,11 @@
   width: 26px;
   height: 26px;
   top: 0;
-  left: 0;
+  right: 0;
   cursor: pointer;
   background: #409eff;
   z-index: 1;
-  border-radius: 0 0 6px 0;
+  border-radius: 0 0 0 6px;
   text-align: center;
   line-height: 26px;
   color: #fff;
