--- a/src/pages/center-board/TopBar/index.scss
+++ b/src/pages/center-board/TopBar/index.scss
@@ -14,6 +14,9 @@
     margin-left: 0px;
     padding-left: 5px;
     padding-right: 5px;
+    > span {
+      margin-left: 3px;
+    }
   }
   & i {
     font-size: 20px;
