feat(hooks): 将第三方对象，例如beautifier，封装进useGlobalObject中，统一管理全局对象

--- a/src/pages/center-board/DraggableItem/index.scss
+++ b/src/pages/center-board/DraggableItem/index.scss
@@ -38,9 +38,9 @@
       background: $selectedColor;
       border-radius: 6px;
     }
-    // & > .drawing-item-copy, & > .drawing-item-delete{
-    //   display: initial;
-    // }
+  }
+  > .el-form-item {
+    padding: 12px 10px;
   }
   & > .drawing-item-copy, & > .drawing-item-delete{
     display: none;
