feat(draggable-item): 根据组件的栅格布局，一行可以放置多个组件

--- a/src/pages/center-board/index.scss
+++ b/src/pages/center-board/index.scss
@@ -33,8 +33,8 @@ $transitionTime: 0.3s;
 
 
 .drawing-board {
-  display: flex;
-  flex-direction: column;
+  // display: flex;
+  // flex-direction: column;
   height: 100%;
   position: relative;
   > * {
