--- a/src/pages/center-board/DraggableItem/index.scss
+++ b/src/pages/center-board/DraggableItem/index.scss
@@ -92,6 +92,9 @@
   .drag-wrapper{
     min-height: 80px;
     width: 100%;
+    > * {
+      transition: all $transitionTime;
+    }
   }
   .layout-name{
     position: absolute;
