feat(container): 容器可以和最外层组件交换位置

--- a/src/pages/center-board/DraggableItem/index.scss
+++ b/src/pages/center-board/DraggableItem/index.scss
@@ -105,6 +105,9 @@
     display: inline-block;
     padding: 0 6px;
   }
+  .el-col{
+    margin-top: 22px;
+  }
 }
 
 // ---------- 修改element样式 ----------
