--- a/src/pages/right-board/index.scss
+++ b/src/pages/right-board/index.scss
@@ -47,3 +47,19 @@
   color: #fff;
   font-size: 18px;
 }
+
+.select-item{
+  display: flex;
+  align-items: center;
+  border: 1px dashed #fff;
+  box-sizing: border-box;
+  margin-bottom: 5px;
+  & .close-btn {
+    cursor: pointer;
+    color: #f56c6c;
+    margin-left: 4px;
+  }
+  & .el-input  {
+    margin-left: 4px;
+  }
+}
