test(test.tsx): 测试文件

--- a/src/pages/center-board/DraggableItem/index.scss
+++ b/src/pages/center-board/DraggableItem/index.scss
@@ -32,7 +32,7 @@
     }
   }
   > .el-form-item {
-    padding: 12px 10px;
+    // padding: 12px 10px;
   }
   .el-icon{
     width: 100%;
@@ -106,7 +106,7 @@
     padding: 0 6px;
   }
   .el-col{
-    margin-top: 22px;
+    margin-top: 12px;
   }
 }
 
