--- a/src/pages/center-board/DraggableItem/index.scss
+++ b/src/pages/center-board/DraggableItem/index.scss
@@ -31,9 +31,9 @@
       border-radius: 6px;
     }
   }
-  > .el-form-item {
-    // padding: 12px 10px;
-  }
+  // > .el-form-item {
+  //   padding: 12px 10px;
+  // }
   .el-icon{
     width: 100%;
     height: 100%;
