feat(node-item): 绑定拖拽事件、点击事件

--- a/src/pages/center-board/index.scss
+++ b/src/pages/center-board/index.scss
@@ -56,6 +56,18 @@
     height: 60px;
     background-color: $selectedColor;
   }
+  .active-from-item {
+    & > .el-form-item{
+      background: $selectedColor;
+      border-radius: 6px;
+    }
+    & > .drawing-item-copy, & > .drawing-item-delete{
+      display: initial;
+    }
+    & > .component-name{
+      color: $primary-light;
+    }
+  }
 }
 
 
