feat(uselocalstorage): 添加缓存功能

--- a/src/pages/center-board/index.scss
+++ b/src/pages/center-board/index.scss
@@ -36,6 +36,19 @@
   > * {
     transition: all $transitionTime;
   }
+  .drawing-item{
+    position: relative;
+    ::after{
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+      right: 0;
+      bottom: 0;
+    }
+  }
   .sortable-ghost {
     position: relative;
     display: block;
