feat(node-item): 复制、删除按钮

--- a/src/pages/center-board/index.scss
+++ b/src/pages/center-board/index.scss
@@ -38,6 +38,7 @@
   }
   .drawing-item{
     position: relative;
+    cursor: move;
     ::after{
       content: "";
       position: absolute;
@@ -79,6 +80,48 @@
     }
     & > .component-name{
       color: $primary-light;
+    }
+  }
+}
+
+.drawing-item{
+  .el-icon{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+  }
+  & > .drawing-item-copy, & > .drawing-item-delete{
+    display: none;
+    position: absolute;
+    top: -10px;
+    width: 22px;
+    height: 22px;
+    line-height: 22px;
+    text-align: center;
+    border-radius: 50%;
+    font-size: 12px;
+    border: 1px solid;
+    cursor: pointer;
+    z-index: 1;
+  }
+  & > .drawing-item-copy{
+    right: 56px;
+    border-color: $primary;
+    color: $primary;
+    background: #fff;
+    &:hover{
+      background: $primary;
+      color: #fff;
+    }
+  }
+  & > .drawing-item-delete{
+    right: 24px;
+    border-color: #F56C6C;
+    color: #F56C6C;
+    background: #fff;
+    &:hover{
+      background: #F56C6C;
+      color: #fff;
     }
   }
 }
