feat(data): radio组件

--- a/src/pages/center-board/index.scss
+++ b/src/pages/center-board/index.scss
@@ -39,7 +39,7 @@
   .drawing-item{
     position: relative;
     cursor: move;
-    ::after{
+    > ::after{
       content: "";
       position: absolute;
       width: 100%;
