feat(right-board): 表单列数

--- a/src/pages/center-board/index.scss
+++ b/src/pages/center-board/index.scss
@@ -33,7 +33,15 @@
 .drawing-board {
   height: 100%;
   position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  &.half {
+    > * {
+      width: 50%;
+    }
+  }
   > * {
+    width: 100%;
     transition: all $transitionTime;
   }
   .drawing-item{
