feat(right-board): 表单有2列时，组件也可以选择占据1列还是2列

--- a/src/pages/center-board/index.scss
+++ b/src/pages/center-board/index.scss
@@ -99,6 +99,9 @@
     height: 100%;
     margin: 0;
   }
+  &.full {
+    width: 100%;
+  }
   & > .drawing-item-copy, & > .drawing-item-delete{
     display: none;
     position: absolute;
