--- a/src/pages/editor/container/right-board/index.scss
+++ b/src/pages/editor/container/right-board/index.scss
@@ -1,7 +1,7 @@
 .right-board {
   .field-box {
     position: relative;
-    height: calc(100vh - 42px);
+    height: calc(100% - 42px);
     box-sizing: border-box;
     overflow: hidden;
   }
