--- a/src/pages/editor/top-bar/index.scss
+++ b/src/pages/editor/top-bar/index.scss
@@ -1,27 +1,71 @@
 @import "~/style/common.scss";
 
-// 顶部按钮样式
-.action-bar{
-  position: relative;
+.top-bar{
+  display: flex;
+  width: 100%;
   height: 42px;
-  text-align: right;
-  padding: 0 15px;
-  box-sizing: border-box;;
-  border: 1px solid #f1e8e8;
-  border-top: none;
-  border-left: none;
-  & .el-button {
-    margin-left: 0px;
-    padding-left: 5px;
-    padding-right: 5px;
-    > span {
-      margin-left: 3px;
+  box-sizing: border-box;
+  border-bottom: 1px solid #f1e8e8;
+  .logo-wrapper{
+    position: relative;
+    background: #fff;
+    padding: 6px 12px;
+    box-sizing: border-box;
+    width: 260px;
+  }
+  .logo{
+    line-height: 30px;
+    color: $primary;
+    font-weight: 600;
+    font-size: 17px;
+    white-space: nowrap;
+    > img{
+      width: 30px;
+      height: 30px;
+      vertical-align: top;
+    }
+    .github{
+      display: inline-block;
+      vertical-align: sub;
+      margin-left: 15px;
+      margin-top: 4px;
+      > img{
+        height: 22px;
+      }
     }
   }
-  & i {
-    font-size: 20px;
-    vertical-align: middle;
+  
+  // 顶部按钮样式
+  .action-bar{
     position: relative;
-    top: -1px;
+    height: 42px;
+    padding: 0 15px;
+    box-sizing: border-box;
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    & .el-button {
+      margin-left: 10px;
+      padding-left: 5px;
+      padding-right: 5px;
+      > span {
+        margin-left: 3px;
+      }
+      &:first-child{
+        margin-left: 0;
+      }
+    }
+    & i {
+      font-size: 20px;
+      vertical-align: middle;
+      position: relative;
+      top: -1px;
+    }
+  }
+
+  .right-bar{
+    width: 370px;
   }
 }
+
